2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer-db.c:
	(tracker_db_move_service): Switch the to and from parameters round
	so the move statement works.
	
	* src/tracker-indexer/tracker-indexer.c: Now use the PathInfo
	struct for move events and also the event queue instead of dealing
	with them specifically there and then. Now rename or move events
	on files work.

2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-index.c: Cleaned up the code.
	* src/tracker-indexer/tracker-indexer.c: When finishing do 2
	things. First make sure we flush BEFORE we unset the flag to say
	we are indexing. This way the flush function doesn't just return.
	Also when finished, we now close the index. This means that the
	daemon can use the new index when it reopens it after indexing.

2008-09-09  Mikael Ottela   <mikael.ottela@ixonos.com>

	* src/tracker-extract/tracker-extract-mp3.c:
	* src/tracker-extract/tracker-extract-gstreamer.c: The audio
	extractors now check that a minimum amount of information
	(title, artist, album, genre) has been found and if not, 
	"tracker:unknown" value is used for these crucial fields.
	This change can be considered a hack and should be reverted
	when tracker supports finding unexisting metadata.

2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-interface.c:
	* src/tracker-indexer/tracker-indexer-db.c: Some small code clean ups.

	* src/tracker-indexer/tracker-indexer.c: Better error handling for
	the move dbus function.

2008-09-09  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c:
	(tracker_file_get_mime_type): Improve the error message.

	* src/tracker-indexer/modules/files.c: Small clean up.
	* src/trackerd/tracker-monitor.c: Fixed the signal emission so the
	file and other file are the right way round for one of the MOVE
	events. This is probably why renaming a file was not working before.
